ScrapPeak brush generate spikes/holes -and- strike on other side of a sculpt #37177

Closed
opened 2013-10-22 13:45:22 +02:00 by Sanc Tuary · 9 comments

%%%--- Operating System, Graphics card ---
winxp sp3 32bits

- Blender version with error, and version that worked ---

tested in 2.69 RC3 , i can't confirm for the spikes/holes in 2.68a but i could still obtain the brush strokes occuring on both side in that version

- Short description of error ---

When you use the Scrape/Peak brush with Dyntopo enabled , at some level of zoom, you will generate nasty spikes/holes-like topology on the other side of your sculpt, even if you enable "Front face only"

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • The model is simple for reproducing purposes, and displayed in the attached screen001.jpg

  • Load the attached scrapepeakhole.blend file - With "LOAD UI" enabled - (i used a load factory setting and i prepared the brush, the angle of view and zoom level it makes it easy to reproduce)

  • click on the Enable Dynamic Topology button and press Z (to switch to wireframe to make it easy for you to see the nasty spike/hole being generated)
    If i don't switch to Z personnally i can't generate the nasty holes/spikes but other people on other systems do, but the "sculpt on both side instead of the one we should be sculpting on" still happens.

  • start making strokes on the whole 3D view, if you don't notice the kind of oddity appearing in the attached screen002.jpg , zoom in and restroke the whole 3D view

  • zoom out and notice that the strokes have been applied on both side instead of only the side we were sculpting on as shown in the attached screen003.jpg

  • attached screen004.jpg show that other side in solid display , you can see those odd holes generated better

important note :
the problem was posted on the BA boards here for information with other more complex blend example :
http://www.blenderartists.org/forum/showthread.php?314941-Dyntopo-sculpting-Random-holes-appearing-while-sculpting

showing that it can happen in much less zoomed in situation, for me it happened that i was unable to reproduce the problem from the thread at the example of zoom given, but could if i zoomed in a lot more.

So while in my simpler example blend from this report i have zoomed in a very lot more than what i would use to sculpt, it may be possible for you to reproduce the problem with a less zoomed in version.

Note 2 : i noticed in the Dyntopo test thread of the Blenderartist board that it has been reported that the problem can happen with Multiresolution sculpting, not only with Dyntopo :
http://blenderartists.org/forum/showthread.php?264568-Dyntopo-tests&p=2497061&viewfull=1#post2497061%%%

%%%--- Operating System, Graphics card --- winxp sp3 32bits - Blender version with error, and version that worked --- tested in 2.69 RC3 , i can't confirm for the spikes/holes in 2.68a but i could still obtain the brush strokes occuring on both side in that version - Short description of error --- When you use the Scrape/Peak brush with Dyntopo enabled , at some level of zoom, you will generate nasty spikes/holes-like topology on the other side of your sculpt, even if you enable "Front face only" - Steps for others to reproduce the error (preferably based on attached .blend file) --- * The model is simple for reproducing purposes, and displayed in the attached screen001.jpg * Load the attached scrapepeakhole.blend file - With "LOAD UI" enabled - (i used a load factory setting and i prepared the brush, the angle of view and zoom level it makes it easy to reproduce) * click on the Enable Dynamic Topology button and press Z (to switch to wireframe to make it easy for you to see the nasty spike/hole being generated) If i don't switch to Z personnally i can't generate the nasty holes/spikes but other people on other systems do, but the "sculpt on both side instead of the one we should be sculpting on" still happens. * start making strokes on the whole 3D view, if you don't notice the kind of oddity appearing in the attached screen002.jpg , zoom in and restroke the whole 3D view * zoom out and notice that the strokes have been applied on both side instead of only the side we were sculpting on as shown in the attached screen003.jpg * attached screen004.jpg show that other side in solid display , you can see those odd holes generated better important note : the problem was posted on the BA boards here for information with other more complex blend example : http://www.blenderartists.org/forum/showthread.php?314941-Dyntopo-sculpting-Random-holes-appearing-while-sculpting showing that it can happen in much less zoomed in situation, for me it happened that i was unable to reproduce the problem from the thread at the example of zoom given, but could if i zoomed in a lot more. So while in my simpler example blend from this report i have zoomed in a very lot more than what i would use to sculpt, it may be possible for you to reproduce the problem with a less zoomed in version. Note 2 : i noticed in the Dyntopo test thread of the Blenderartist board that it has been reported that the problem can happen with Multiresolution sculpting, not only with Dyntopo : http://blenderartists.org/forum/showthread.php?264568-Dyntopo-tests&p=2497061&viewfull=1#post2497061%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Yeah, I noticed that too, but couldn't reproduce or nail it down. Jonathan Williamson said he had it too.
Cool to see this issue nailed down and reported! :)%%%

%%%Yeah, I noticed that too, but couldn't reproduce or nail it down. Jonathan Williamson said he had it too. Cool to see this issue nailed down and reported! :)%%%

%%%Confirmed, and I have an idea about what it might be.

The spikes/holes must be a separate issue than the two-side issue though.

Assigning to self.
%%%

%%%Confirmed, and I have an idea about what it might be. The spikes/holes must be a separate issue than the two-side issue though. Assigning to self. %%%

%%%Indeed they are a different issue. Spikes are fixed in r60900, looking into the sculpt through issue now.%%%

%%%Indeed they are a different issue. Spikes are fixed in r60900, looking into the sculpt through issue now.%%%

This seems to be a precision issue because we use rays that start too far away from the mesh when using orthographic camera. If this is the case, it is easy to fix by projecting vector to object bounding box. Still I want to dig some more, it seems strange that the front faces are not 'hit' at all.

This seems to be a precision issue because we use rays that start too far away from the mesh when using orthographic camera. If this is the case, it is easy to fix by projecting vector to object bounding box. Still I want to dig some more, it seems strange that the front faces are not 'hit' at all.

This issue was referenced by blender/blender-addons-contrib@9efef3c251

This issue was referenced by blender/blender-addons-contrib@9efef3c2515bef9cd2928834ab7e29cf32c20593

This issue was referenced by 9efef3c251

This issue was referenced by 9efef3c2515bef9cd2928834ab7e29cf32c20593

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9efef3c251.

Closed by commit 9efef3c251.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37177
No description provided.